# facade

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  dump.rdb
Buildscripts/: bundle.py  download.py  facade_h.py  xsd.py
CLI/: commands.cpp  commands.hpp  main.cpp
Camera/: Camera.entitlements  CameraDevice.swift  CameraProvider.swift  CameraStream.swift  Info.plist  SplashAnimator.swift  main.swift
Darwin/Camera/: Camera.entitlements  CameraDevice.swift  CameraProvider.swift  CameraStream.swift  Info.plist  SplashAnimator.swift  main.swift
Darwin/Facade/: CameraCapture.swift  CameraFilter.swift  CameraView.swift  Constants.swift  ContentView.swift  Credits.rtf  Devices.swift  DevicesView.swift  Facade-Bridging-Header.h  Facade.entitlements  FacadeApp.swift  FacadeDebug.entitlements  FaceChooserView.swift  FaceView.swift  GeneralSettingsView.swift  IconView.swift  InitView.swift  Lens-Bridging-Header.h  SettingsView.swift  SetupView.swift  libfacade.h
Darwin/Facade.xcodeproj/: project.pbxproj
Darwin/Facade.xcodeproj/project.xcworkspace/xcuserdata/shukantpal.xcuserdatad/: UserInterfaceState.xcuserstate
Darwin/Facade.xcodeproj/xcshareddata/xcschemes/: Facade.xcscheme
Darwin/Facade.xcodeproj/xcuserdata/shukantpal.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Darwin/Facade.xcodeproj/xcuserdata/shukantpal.xcuserdatad/xcschemes/: xcschememanagement.plist
Darwin/Facade/Assets.xcassets/AppIcon.appiconset/: Contents.json
Darwin/Facade/Assets.xcassets/Bryan Greynolds.imageset/: Contents.json
Darwin/Facade/Assets.xcassets/David Kovalniy.imageset/: Contents.json
Darwin/Facade/Assets.xcassets/Ewon Spice.imageset/: Contents.json
Darwin/Facade/Assets.xcassets/Kim Jarrey.imageset/: Contents.json
Darwin/Facade/Assets.xcassets/Tim Chrys.imageset/: Contents.json
Darwin/Facade/Assets.xcassets/Tim Norland.imageset/: Contents.json
Darwin/Facade/Assets.xcassets/Zahar Lupin.imageset/: Contents.json
Darwin/FacadeCLI/: main.c
Darwin/FacadeTests/: FacadeTests.swift
Darwin/FacadeUITests/: FacadeUITests.swift
Darwin/libfacade/: FacadeKit.m  facade.h  facade.m  libfacade.h  libfacadexml.m
Darwin/libfacade/Headers/: facade.h
Darwin/libfacade/libfacade.docc/: libfacade.md
Darwin/libfacadeTests/: libfacadeTests.swift
Facade/: ContentView.swift  DevicesView.swift  Facade.entitlements  FacadeApp.swift  SetupView.swift
Facade.xcodeproj/: project.pbxproj
Facade.xcodeproj/project.xcworkspace/xcuserdata/shukantpal.xcuserdatad/: UserInterfaceState.xcuserstate
Facade.xcodeproj/xcuserdata/shukantpal.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Facade.xcodeproj/xcuserdata/shukantpal.xcuserdatad/xcschemes/: xcschememanagement.plist
FacadeCLI/: main.c
FacadeKit/: FacadeKit.h  FacadeKit.m
FacadeUITests/: FacadeUITestsLaunchTests.swift
Include/: facade.h  facade.xml  facade.xsd
Interop/Python/: .gitignore  CMakeLists.txt  conf.py  driver.py  index.rst  requirements.txt  setup.py  test_program.py
Interop/Python/docs/: FacadeDevice.rst  FacadeDeviceType.rst  FacadeError.rst  FacadeErrorCode.rst  VideoFacadeDevice.rst  facade_init.rst
Interop/Python/facade/: __init__.py  facade_device.py  facade_device_type.py  facade_error_code.py  libfacade.py  libfacade_h.py  video_facade_device.py
Interop/Python/pyfacade/: __init__.py  facade_device.py  facade_device_type.py  facade_error_code.py  libfacade.py  video_facade_device.py
Lens/: CMakeLists.txt  Info.plist.in  Lens.entitlements  README.md  clean-cf.py  clean-fm.py  data.cpp  face_pipeline.cpp  main.cpp  mirage.hpp  test.py
Lens/darwin/: center_face.mm  face_compositor.metal  face_mesh.mm  face_swap.mm  filters.mm  load.mm  model_loader.h  model_loader.mm
Lens/include/: filters.hpp  internal.h  lens.h  lens.hpp  ml.h
Lens/lens/: center_face.cc  data.cc  face_mesh.cc  face_pipeline.cc  face_swap.cc  main.cc
Lens/lens/input/: video.cc
Lens/lens/output/: base_output.cc  base_output.h  facade_output.cc  facade_output.h  file_output.cc  file_output.h  output.cc
Lens/ml/: center_face.cpp  center_face.mm  coreml.mm  face_mesh.mm  face_swap.cpp  face_swap.mm  model_loader.h  model_loader.mm
Lens/onnx/: center_face.cc  face_mesh.cc  face_swap.cc
Lens/platform/darwin/: filters.mm  load.mm
Lens/scripts/: clean-fm.py  test.py
Mirage/: README.md  face_pipeline.cpp  main.cpp  mirage.hpp  pipeline_control_delegate.cpp  test.py
Test/: main.cpp
www/: color.py  gatsby-config.ts  package-lock.json  package.json  pnpm-lock.yaml  styles.css  tsconfig.json
www/src/components/: Button.astro  Card.astro  Header.astro  Header.tsx  Page.tsx  Preview.tsx  ResponsiveColumns.astro  ResponsiveHStack.astro  ResponsiveVStack.astro  SiteIcon.tsx  Spotlight.astro  Stars.astro  WireGrid.astro
www/src/components/samples/: LineLoopProgram.astro
www/src/components/spotlights/: FaceSwapSpotlight.astro
www/src/layouts/: Layout.astro
www/src/pages/: index.astro  index.tsx
